force-app/main/default/objects/Commission__c/fields/Client_Name__c.field-meta.xml
<CustomField>
    <fullName>Client_Name__c</fullName>
    <formula>Unit__r.Account__r.PersonContact.FirstName &amp;&quot; &quot;&amp; Unit__r.Account__r.PersonContact.LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Client Name</label>
    <type>Text</type>
</CustomField>