force-app/main/default/objects/Commission__c/fields/Days_Count__c.field-meta.xml
<CustomField>
    <fullName>Days_Count__c</fullName>
    <formula>IF(
  ISBLANK( DATEVALUE(CreatedDate) ),
  &quot;&quot;,
  TEXT(TODAY() - DATEVALUE(CreatedDate)) &amp; &quot; days&quot;
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Days Count</label>
    <type>Text</type>
</CustomField>