force-app/main/default/objects/Commission__c/fields/DLD_Payment_Completion_Date__c.field-meta.xml
<CustomField>
    <fullName>DLD_Payment_Completion_Date__c</fullName>
    <formula>Unit__r.DLD_Registration_Paid_Date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>DLD Payment Completion Date</label>
    <type>Date</type>
</CustomField>