force-app/main/default/objects/Commission__c/fields/Eligibility_Reason__c.field-meta.xml
<CustomField>
    <fullName>Eligibility_Reason__c</fullName>
    <label>Eligibility Reason</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>