force-app/main/default/objects/Commission__c/fields/Eligibility_Run_Date__c.field-meta.xml
<CustomField>
    <fullName>Eligibility_Run_Date__c</fullName>
    <label>Eligibility Run Date</label>
    <type>DateTime</type>
</CustomField>