force-app/main/default/objects/Commission__c/fields/Invoice_Generated_Date__c.field-meta.xml
<CustomField>
    <fullName>Invoice_Generated_Date__c</fullName>
    <label>Invoice Generated Date</label>
    <type>Date</type>
</CustomField>