force-app/main/default/objects/Commission__c/fields/Is_VAT_Applicable__c.field-meta.xml
<CustomField>
    <fullName>Is_VAT_Applicable__c</fullName>
    <formula>IF(Is_VAT_Paid__c = true,
  true,
  IF(VAT_Exempted__c = true,
    false,
    IF(TEXT(Agency__r.VAT_TRN__c) = &quot;Yes&quot;,
      true,
      false
    )
  )
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Is VAT Applicable</label>
    <type>Checkbox</type>
</CustomField>