force-app/main/default/objects/Commission__c/fields/Is_VAT_Paid__c.field-meta.xml
<CustomField>
    <fullName>Is_VAT_Paid__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is VAT Paid</label>
    <type>Checkbox</type>
</CustomField>