force-app/main/default/objects/Commission__c/fields/Manual_Override__c.field-meta.xml
<CustomField>
    <fullName>Manual_Override__c</fullName>
    <label>Manual Override</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>On Hold</fullName>
            </value>
            <value>
                <fullName>Cancelled</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>