force-app/main/default/objects/Commission__c/fields/Payment_Method__c.field-meta.xml
<CustomField>
    <fullName>Payment_Method__c</fullName>
    <description>How the commission payment was settled. Values shared with the Receipt payment method via the Payment Method global value set. Set when a payment is recorded on the commission.</description>
    <inlineHelpText>How the commission payment was settled (e.g. Bank Transfer, Cash). Captured when the payment is recorded.</inlineHelpText>
    <label>Payment Method</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Payment_Method</valueSetName>
    </valueSet>
</CustomField>