force-app/main/default/objects/Commission__c/fields/Total_Commission_Amount__c.field-meta.xml
<CustomField>
    <fullName>Total_Commission_Amount__c</fullName>
    <formula>NULLVALUE(Commission_Amount__c, 0) + NULLVALUE(VAT_Amount__c, 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Commission Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>