force-app/main/default/objects/Commission__c/fields/Twenty_Payment_Completion_Date__c.field-meta.xml
<CustomField>
    <fullName>Twenty_Payment_Completion_Date__c</fullName>
    <formula>Unit__r.Twenty_Percent_Paid_Date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>20% Payment Completion Date</label>
    <type>Date</type>
</CustomField>