force-app/main/default/objects/Commission__c/fields/Unit_Booking_Date__c.field-meta.xml
<CustomField>
    <fullName>Unit_Booking_Date__c</fullName>
    <formula>Unit__r.Booked_At_Date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Unit Booking Date</label>
    <type>Date</type>
</CustomField>