force-app/main/default/objects/Commission__c/fields/Unit_Sold_Date__c.field-meta.xml
<CustomField>
    <fullName>Unit_Sold_Date__c</fullName>
    <formula>Unit__r.Sold_At_Date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Unit Sold Date</label>
    <type>Date</type>
</CustomField>