force-app/main/default/objects/Commission__c/fields/VAT_Exempted__c.field-meta.xml
<CustomField>
    <fullName>VAT_Exempted__c</fullName>
    <defaultValue>false</defaultValue>
    <label>VAT Exempted</label>
    <type>Checkbox</type>
</CustomField>