force-app/main/default/objects/Commission__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Agency__c</columns>
    <columns>Unit__c</columns>
    <columns>Unit_Number__c</columns>
    <columns>Project_Name__c</columns>
    <columns>Commission_Amount__c</columns>
    <columns>Commission_Rate__c</columns>
    <columns>Payment_Date__c</columns>
    <columns>Status__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>